--- a/index.html
+++ b/index.html
@@ -187,5 +187,23 @@ btnRu.addEventListener('click', ()=> showLang('ru'));
 const saved = localStorage.getItem('site_lang') || 'uz';
 showLang(saved);
 </script>
+  <!-- Ijtimoiy tarmoq tugmalari - yangi qo'shilgan -->
+  <div style="background: #001f3f; padding: 30px 20px; text-align: center; margin-top: -10px;">
+    <a href="https://t.me/SamOZKAXBOROTXIZMAT" target="_blank" class="social-btn telegram" style="display: inline-block; margin: 0 20px; padding: 14px 32px; background: rgba(255,255,255,0.15); color: white; text-decoration: none; border-radius: 50px; font-size: 20px; font-weight: 600; transition: all 0.4s; backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.2);">
+      <i class="fab fa-telegram-plane"></i> Telegram
+    </a>
+    <a href="https://www.instagram.com/Sopsttm" target="_blank" class="social-btn instagram" style="display: inline-block; margin: 0 20px; padding: 14px 32px; background: rgba(255,255,255,0.15); color: white; text-decoration: none; border-radius: 50px; font-size: 20px; font-weight: 600; transition: all 0.4s; backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.2);">
+      <i class="fab fa-instagram"></i> Instagram
+    </a>
+  </div>
+
+  <style>
+    .social-btn:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 15px 35px rgba(0,0,0,0.5);
+    }
+    .telegram:hover { background: #0088cc !important; }
+    .instagram:hover { background: #E4405F !important; }
+  </style>
 </body>
 </html>
