--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ ul.sports{columns:2;list-style:disc;margin-left:18px;padding-left:12px;color:var
     <div class="hero-left" id="content-uz">
       <h1 class="hero-title">Biz chempionlarni tayyorlaymiz!</h1>
      <section id="about" class="card">
-      <p style="margin-top:12px"><a class="mail-btn" id="mail-uz" href="mailto:samarqandopsttm@gmail.com?subject=Kontakt">Biz bilan bog'lanish</a></p>
+      <p style="margin-top:12px"><a class="mail-btn" id="mail-uz" href="mailto:samarqandopsttm@gmail.com?subject=Kontakt"
     </div>
     <div class="card" id="sidebar-uz" style="min-width:260px;">
       <h3 style="margin-top:0;color:var(--blue)">Kontakt</h3>
