--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <meta name="description" content="Samarqand Olimpiya va Paralimpiya sport turlari tayyorlash markazi">
 <link rel="icon" href="assets/logo.png">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-<style> /* Sport vazirligi logotipini orqa fonga nozik joylashtirish */
+<style> 
+  /* Sport vazirligi logotipini orqa fonga nozik joylashtirish */
 body {
   position: relative;
   background: #f8fcff url('https://i.imgur.com/2jX5e0F.png') center 140px / 420px auto no-repeat fixed;
@@ -32,6 +33,7 @@ body::before {
     background: rgba(248, 252, 255, 0.96);
   }
 }
+  </style>
 :root{--blue:#0b61b3;--green:#1fa65a;--dark:#072238;--muted:#5d6b77;--white:#fff;--card-bg:#ffffff;--shadow:0 8px 30px rgba(7,34,56,0.1)}
 *{box-sizing:border-box;margin:0;padding:0}
 body{font-family:Inter,system-ui,-apple-system,sans-serif;background:#f8fcff;color:var(--dark);line-height:1.8}
